# PCOM

./: CMakeLists.txt  README.md  semihonest.cpp
MultipartyPSI/: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
MultipartyPSI/CMAKE_CURRENT_BINARY_DIR/: Makefile
MultipartyPSI/cmake/: FindGMP.cmake
MultipartyPSI/depends/KZG_ext-main/: CMakeCache.txt
MultipartyPSI/depends/KZG_ext-main/include/: KZG_verifier.h  fft.h
MultipartyPSI/depends/KZG_ext-main/src/: kzg_main.cpp
MultipartyPSI/depends/LigeroLink/: README.md
MultipartyPSI/depends/LigeroLink/example/: Add.cpp
MultipartyPSI/depends/LigeroLink/include/ligero/: exception.hpp  prelude.hpp
MultipartyPSI/depends/LigeroLink/include/ligero/network/: analysis.hpp  serialize.hpp
MultipartyPSI/depends/LigeroLink/include/ligero/util/: color.hpp  timer.hpp
MultipartyPSI/depends/LigeroLink/include/ligero/util/boost/: portable_binary_iarchive.hpp
MultipartyPSI/examples/: Add.cpp
MultipartyPSI/modules/LigeroLink/: CMakeLists.txt
MultipartyPSI/modules/LigeroLink/include/ligero/tcp/: client.hpp  server.hpp
MultipartyPSI/modules/LigeroLink/include/ligero/util/: tree.hpp  uuid.hpp
MultipartyPSI/modules/LigeroLink/include/ligero/util/boost/: portable_binary_archive.hpp
MultipartyPSI/report/: runtime.xlsx
MultipartyPSI/src/: cmake_install.cmake  mpsi.cpp  polynomial_committment.cpp  semihonest_int.cpp  semihonest_old.cpp
MultipartyPSI/src/src/: Makefile
MultipartyPSI/src/utils/: csv.hpp
depends/KZG_ext-main/: CMakeLists.txt
depends/KZG_ext-main/include/: KZG_std_prover.h  enviroment.h  test_point.hpp  trusted_setup.h
depends/KZG_ext-main/include/algebra/: polynomial.h
depends/KZG_ext-main/src/: CMakeCache.txt  benchmark_algebra.cpp
depends/LigeroLink/: .gitignore  CMakeLists.txt
depends/LigeroLink/include/ligero/: concepts.hpp
depends/LigeroLink/include/ligero/serialization/: naive.hpp
depends/LigeroLink/include/ligero/tcp/: client.hpp  server.hpp
depends/LigeroLink/include/ligero/util/: log.hpp  singleton.hpp
depends/LigeroLink/include/ligero/util/boost/: portable_binary_iarchive.cpp  portable_binary_oarchive.cpp  portable_binary_oarchive.hpp
report/: communication.py  multipoint eval time.xlsx  plot1.py  plot2.py  plot_batch.py  plot_batch_single.py  runtime.xlsx  stackbar.py  storage.py
src/: CMakeCache.txt  CMakeLists.txt  a.out  batch.cpp  batch2.cpp  bin_size.txt  bulletproof.cpp  bulletproof_Ec1.cpp  cmake_install.cmake  mpsi.cpp  polynomial_commitment.cpp
src/src/: Makefile
